corpus/c/syntax/case-10/snapshots/gcc15/render.ci.txt
src/main.c:2:26: error: syntax error
help: fix the first parser error at the user-owned location
why: expected '}}' before ';' token
| src/main.c:2:26
|     int values[2] = {1, 2;
|                          ^
src/main.c:4:1: error: syntax error
help: fix the first parser error at the user-owned location
why: expected ',' or ';' at end of input
| src/main.c:4:1
| }
| ^
other errors:
  - src/main.c:2:26: error: syntax error
  - src/main.c:4:1: error: syntax error
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output